[package]
name = "rust-esp32"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# No xtensa in regular compiler yet
[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"

[profile.release]
# symbols are nice and they don't increase the size on Flash
debug = true
opt-level = "z"

[profile.dev]
opt-level = "s"

[features]
bind = []

[dependencies]
anyhow = { version = "1.0.51", features = ["backtrace"] }
esp-idf-sys = "0.28.2"
embedded-svc = "0.15.4"
esp-idf-svc = "0.34.1"
esp-idf-hal = "0.29.4"
ssd1306 = "0.7.0"

[build-dependencies]
embuild = "0.27.0"
anyhow = "1.0.51"
